--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
   sqflite: ^2.0.0
   path: ^1.8.0
   image_picker: ^1.0.2
+  flutter_share_me: ^1.4.0
+  url_launcher: ^6.1.14
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
